tests/fail/registering/duplicated ids for sorts.mmu
(sort s )
(sort s pure )
